Add community guidelines, misc changes

--- a/apps/site/src/_pages/legal/acceptable-use/0_index.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/0_index.mdx
@@ -116,4 +116,4 @@ We will interpret our policies and resolve disputes in favor of protecting users
 
 **Enforcement.** The Block Protocol retains full discretion to [take action](/legal/community#what-happens-if-someone-violates-the-block-protocols-policies) in response to a violation of these policies, including account suspension, account [termination](/legal/terms#3-block-protocol-may-terminate), or [removal](/legal/terms#2-block-protocol-may-remove-content) of content. Please also see our [Community Guidelines](/legal/community) for actions you can take if something or someone offends you.
 
-**Reinstatement and appeal.** If your content or account has been disabled or restricted and you seek reinstatement or wish to appeal, please see our [Appeal and Reinstatement page](/legal/acceptable-use/appeals) for information about the process and use our [contact form](/contact) to submit a request.
+**Reinstatement and appeal.** If your content or account has been disabled or restricted and you seek reinstatement or wish to appeal, please see our [Appeals Policy](/legal/acceptable-use/appeals) for information about the process and use our [contact form](/contact) to submit a request.
