--- a/apps/site/src/_pages/legal/acceptable-use/10_reports.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/10_reports.mdx
@@ -6,6 +6,7 @@ location: /legal/acceptable-use/reports
 redirect_from:
   - /legal/terms/reports
   - /legal/privacy/reports
+  - /legal/acceptable-use/reporting-abuse
   - /privacy/reports
   - /terms/reports
   - /acceptable-use/reports
