Add licensing FAQ x-linked from legal docs

--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -123,6 +123,14 @@ To save data beyond the session, blocks should make use of the [operations defin
 
 </FAQ>
 
+<FAQ question="How are blocks licensed?">
+
+Blocks can be published with any kind of license, similar to code on GitHub, or libraries in a package manager like npm.
+  
+We strongly encourage block publishers to be explicit about the permissions (if any) they grant to others when publishing blocks to the [Þ Hub](https://blockprotocol.org/hub), and recommend using open-source software licenses when publishing blocks, rather than relying on Creative Commons licenses. More information about applying software licenses to blocks and types can be found on the HASH glossary [licensing](https://hash.ai/glossary/licensing) page.
+
+</FAQ>
+
 <FAQ question="What are the security considerations of blocks?">
 
 Similar to most programming language package managers, because anybody can publish executable code (in the form of a block), it's important you trust the block you're executing.
