Add Corporate Terms, various misc updates

--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -9,9 +9,40 @@ topics:
 
 # Legal
 
-## Terms of Service
-- [Block Protocol Terms of Service](terms)
+## Quick-links
 
-## Privacy
-- [Block Protocol Privacy Statement](privacy)
-- [Block Protocol Data Protection Agreement](terms/dpa)
+### Using the Block Protocol
+- [Terms of Service](terms)
+- [Corporate Terms of Service](terms-corporate)
+- [Community Guidelines](community)
+- [Acceptable Use Policy](acceptable-use)
+  - [Bullying and Harassment](acceptable-use/bullying)
+  - [Disruptive Behavior](acceptable-use/disruption)
+  - [Doxxing and Invasion](acceptable-use/doxxing)
+  - [Hate Speech and Discrimination](acceptable-use/discrimination)
+  - [Impersonation](acceptable-use/impersonation)
+  - [Malware and Exploits](acceptable-use/malware)
+  - [Misinformation and Disinformation](acceptable-use/veracity)
+  - [Obscene Content](acceptable-use/obscenity)
+  - [Violent Content](acceptable-use/violence)
+- [Reporting Abuse or Spam](acceptable-use/reports)
+- [Appeals Policy](acceptable-use/appeals)
+
+### Privacy
+- [Privacy Statement](privacy)
+- [Data Protection Agreement](terms/dpa)
+- [List of Sub-processors](privacy/subprocessors)
+- [Information about Cookies](privacy/cookies)
+- [Private Information Removal Policy](privacy/private-information-removal)
+- [Guidelines for Legal Requests of Block Protocol User Data](privacy/user-data-legal-requests)
+
+## Submitting requests
+
+Please serve requests and notices to:
+
+> HASH, Inc.
+> FAO: Block Protocol Legal Counsel
+> 2109 Broadway Unit 1141
+> New York, NY 10023 USA
+
+For the fastest response time, email a courtesy copy of your request to legal@hash.ai
