--- a/apps/site/src/_pages/legal/acceptable-use/0_index.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/0_index.mdx
@@ -14,11 +14,11 @@ topics:
 
 **Short version:** _We host a wide variety of collaborative projects from all over the world, and that collaboration only works when our users are able to work together in good faith. While using the Service, you must comply with our Acceptable Use Policies, which include some restrictions on content and conduct on the Block Protocol related to user safety, intellectual property, privacy, authenticity, and other limitations. In short, be excellent to each other._
 
-Capitalized terms used but not defined in these Acceptable Use Policies have the meanings assigned to them in our [Terms of Service](/legal/terms), [Corporate Terms of Service](/legal/terms-for-corporates), and [Privacy Statement](/legal/privacy). For customers subject to the [Corporate Terms of Service](/legal/terms-for-corporates), "you" and "your" refer to "Customer" or "Users". "We", "us", and "our" refer to "Block Protocol".
+Capitalized terms used but not defined in these Acceptable Use Policies have the meanings assigned to them in our [Terms of Service](/legal/terms), [Corporate Terms of Service](/legal/terms-corporate), and [Privacy Statement](/legal/privacy). For customers subject to the [Corporate Terms of Service](/legal/terms-corporate), "you" and "your" refer to "Customer" or "Users". "We", "us", and "our" refer to "Block Protocol".
 
 ## 1. Compliance with Laws and Regulations
 
-You are responsible for using the Service in compliance with all applicable laws, regulations, and all of our Acceptable Use Policies. These policies may be updated from time to time and are provided below, as well as in our [Terms of Service](/legal/terms) and [Corporate Terms of Service](/legal/terms-for-corporates).
+You are responsible for using the Service in compliance with all applicable laws, regulations, and all of our Acceptable Use Policies. These policies may be updated from time to time and are provided below, as well as in our [Terms of Service](/legal/terms) and [Corporate Terms of Service](/legal/terms-corporate).
 
 ## 2. User Safety
 
