--- a/apps/site/src/_pages/legal/acceptable-use/7_veracity.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/7_veracity.mdx
@@ -1,6 +1,6 @@
 ---
 title: Block Protocol Misinformation and Disinformation Policy
-shortTitle: Misinformation and Disinformation Policy
+shortTitle: Misinformation and Disinformation
 location: /legal/acceptable-use/veracity
 redirect_from:
   - /acceptable-use/veracity
