--- a/apps/site/src/_pages/legal/terms/0_index.mdx
+++ b/apps/site/src/_pages/legal/terms/0_index.mdx
@@ -39,8 +39,7 @@ Thank you for using the Block Protocol (**Þ**). Please read this _Terms of Serv
 | [R. Miscellaneous](#r-miscellaneous) | Please see this section for legal details including our choice of law. |
 
 ## The Block Protocol Terms of Service
-Effective date: February 21, 2023
-
+Version Effective Date: February 28, 2023
 
 ## A. Definitions
 **Short version:** *We use these basic terms throughout the agreement, and they have specific meanings. You should know what we mean when we use each of the terms. There's not going to be a test on it, but it's still useful information.*
@@ -147,7 +146,7 @@ Additionally, we may be [compelled by law](/legal/privacy#for-legal-disclosure) 
 Block Protocol will provide notice regarding our access to private project content, unless [for legal disclosure](/legal/privacy#for-legal-disclosure), to comply with our legal obligations, or where otherwise bound by requirements under law, for automated scanning, or if in response to a security threat or other risk to security.
 
 ## F. Copyright Infringement and DMCA Policy
-If you believe that content on the Block Protocol website violates your copyright, please contact us in accordance with the HASH [Copyrighted Materials (DMCA) Policy](https://hash.ai/legal/copyright). If you are a copyright owner and you believe that content on Block Protocol violates your rights, please contact us in accordance with the steps outlined in our public HASH [DMCA Takedown Notice submission guidelines](https://hash.ai/legal/copyright-dmca-notice), which outline the process and contact route via which copyright notices can be served to the Block Protocol. There may be legal consequences for sending a false or frivolous takedown notice. Before sending a takedown request, you must consider legal uses such as fair use and licensed uses.
+If you believe that content on the Block Protocol website violates your copyright, please contact us in accordance with the HASH [Copyrighted Materials (DMCA) Policy](https://hash.ai/legal/copyright). If you are a copyright owner and you believe that content on Block Protocol violates your rights, please contact us in accordance with the steps outlined in our public HASH [DMCA Takedown Notice submission guidelines](https://hash.ai/legal/copyright-dmca-notice), which outlines the process and contact route via which copyright notices can be served to the Block Protocol. There may be legal consequences for sending a false or frivolous takedown notice. Before sending a takedown request, you must consider legal uses such as fair use and licensed uses.
 
 We will terminate the Accounts of [repeat infringers](/legal/copyright/#e-repeated-infringement) of this policy.
 
@@ -176,7 +175,7 @@ Block Protocol may offer subscription-based access to our API for those Users wh
 ## I. Block Protocol Additional Product Terms
 **Short version:** *You need to follow certain specific terms and conditions for Block Protocol's various features and products, and you agree to the Supplemental Terms and Conditions when you agree to this Agreement.*
 
-Some Service features may be subject to additional terms specific to that feature or product as set forth in the Block Protocol Additional Product Terms. By accessing or using the Services, you also agree to the [Block Protocol Additional Product Terms](/legal/terms/products).
+Some Service features may be subject to additional terms specific to that feature or product as set forth in the [Block Protocol Additional Product Terms](/legal/terms/products). By accessing or using the Services, you also agree to the [Block Protocol Additional Product Terms](/legal/terms/products).
 
 ## J. Beta Previews
 **Short version:** *Beta Previews may not be supported or may change at any time. You may receive confidential information through those programs that must remain confidential while the program is private. We'd love your feedback to make our Beta Previews better.*
@@ -214,7 +213,7 @@ Our pricing and payment terms are available at [blockprotocol.org/pricing](/pric
 
 **Payment Based on Usage** Some Service features are billed based on your usage. A limited quantity of these Service features may be included in your plan for a limited term without additional charge. If you choose to purchase paid Service features beyond the quantity included in your plan, you pay for those Service features based on your actual usage in the preceding month. Payment for these purchases will be charged on a periodic basis in arrears, ordinarily monthly, and occassionally more frequently, depending on your volume of usage. See [Block Protocol Additional Product Terms for Details](/legal/terms/products) for more information.
 
-**Invoicing** For invoiced Users, User agrees to pay the fees in full, up front without deduction or setoff of any kind, in U.S. Dollars. User must pay the fees within thirty (30) days of the Block Protocol invoice date. Amounts payable under this Agreement are non-refundable, except as otherwise provided in this Agreement. If User fails to pay any fees on time, Block Protocol reserves the right, in addition to taking any other action at law or equity, to (i) charge interest on past due amounts at 3.0% per month or the highest interest rate allowed by law, whichever is greater, and to charge all expenses of recovery, and (ii) terminate the applicable order form. User is solely responsible for all taxes, fees, duties and governmental assessments (except for taxes based on Block Protocol's net income) that are imposed or become due in connection with this Agreement.
+**Invoicing** For invoiced Users, User agrees to pay the fees in full, up front without deduction or setoff of any kind, in U.S. Dollars. User must pay the fees within thirty (30) days of the Block Protocol invoice date. Amounts payable under this Agreement are non-refundable, except as otherwise provided in this Agreement. If User fails to pay any fees on time, Block Protocol reserves the right, in addition to taking any other action at law or equity, to (i) charge interest on past due amounts at 3.0% per month or the highest interest rate allowed by law, whichever is less, and to charge all expenses of recovery, and (ii) terminate the applicable order form. User is solely responsible for all taxes, fees, duties and governmental assessments (except for taxes based on Block Protocol's net income) that are imposed or become due in connection with this Agreement.
 
 ### 4. Authorization
 By agreeing to these Terms, you are giving us permission to charge your on-file credit card, PayPal account, digital currency wallet, bank account, or other approved methods of payment for fees that you authorize for Block Protocol.
