--- a/apps/site/src/_pages/legal/terms/1_product.mdx
+++ b/apps/site/src/_pages/legal/terms/1_product.mdx
@@ -51,7 +51,7 @@ In addition, you must not use the External Services product or service:
 - to engage in activity that places a burden on our servers, where that burden is disproportionate to the benefits provided to users; or
 - in connection with any cryptomining activity.
 
-If you have questions about whether your use or intended use falls into these categories, please contact [GitHub Support](/contact).
+If you have questions about whether your use or intended use falls into these categories, please contact [Block Protocol Support](/contact).
 
 In order to prevent violations of these limitations and abuse of External Services, the Block Protocol may monitor your use of External Services. Misuse of External Services may result in restrictions in your ability to use one, several or all External Services, or in some cases, suspension or termination of your Block Protocol account. 
 
@@ -75,7 +75,7 @@ Block Protocol products and services may, depending on your preferred telemetry 
 
 ### Previews
 
-Previews means software, online services and additional products and features provided for preview, evaluation, demonstration or trial purposes, or pre-release versions of those, such as alpha, beta, or early access. If your Agreement does not include terms and conditions that address Previews, then the following terms apply. GitHub grants a limited right to use a non-production instance of the Preview. Previews are provided “AS-IS”, “WITH ALL FAULTS” and “AS AVAILABLE”. GitHub may change or discontinue Previews at any time without notice. Any information we give you about a private Preview will be considered GitHub’s confidential information. If you choose to provide comments or suggestions about a Preview, we may use that feedback for any purpose without obligation of any kind. GitHub’s maximum liability is limited to direct damages up to US $5,000. GitHub has no obligation to defend, indemnify, or hold you harmless for claims brought by third parties arising from your use of Previews.
+Previews means software, online services and additional products and features provided for preview, evaluation, demonstration or trial purposes, or pre-release versions of those, such as alpha, beta, or early access. If your Agreement does not include terms and conditions that address Previews, then the following terms apply. The Block Protocol grants a limited right to use a non-production instance of the Preview. Previews are provided “AS-IS”, “WITH ALL FAULTS” and “AS AVAILABLE”. The Block Protocol may change or discontinue Previews at any time without notice. Any information we give you about a private Preview will be considered the Block Protocol's confidential information. If you choose to provide comments or suggestions about a Preview, we may use that feedback for any purpose without obligation of any kind. The Block Protocol's maximum liability is limited to direct damages up to US $5,000. The Block Protocol has no obligation to defend, indemnify, or hold you harmless for claims brought by third parties arising from your use of Previews.
 
 ### Availability
 
