Update legal index

--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -14,6 +14,7 @@ topics:
 ### Using the Block Protocol
 - [Terms of Service](terms)
 - [Corporate Terms of Service](terms-corporate)
+- [Terms for Additional Products and Features](terms/product)
 - [Community Guidelines](community)
 - [Acceptable Use Policy](acceptable-use)
   - [Bullying and Harassment](acceptable-use/bullying)
